syntax = "proto3";
package example;

import "github.com/envoyproxy/protoc-gen-validate/validate/validate.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option (gogoproto.goproto_unkeyed_all) = false;
option (gogoproto.goproto_unrecognized_all) = false;
option (gogoproto.goproto_sizecache_all) = false;

service PersonService {
    rpc CreatePerson (CreatePersonRequest) returns (Person) {
    }
    rpc GetPerson (GetPersonRequest) returns (Person) {
    }
    rpc GetPersons (GetPersonsRequest) returns (Persons) {
    }
    rpc UpdatePerson (UpdatePersonRequest) returns (google.protobuf.Empty) {
    }
    rpc DeletePerson (DeletePersonRequest) returns (google.protobuf.Empty) {
    }
}

enum Status {
    NO_STATUS = 0;
    PENDING = 1;
    ACTIVE = 2;
    EXPIRED = 3;
}

message CreatePersonRequest {
    Status status = 1;
    string name = 2;
    string email = 3;
}

message GetPersonRequest {
    string id = 1 [(validate.rules).string.pattern = "^[a-f\\d]{24}$"];
}

message GetPersonsRequest {
    Status status = 1;
    int64 skip = 2;
    int64 limit = 3;
}

message UpdatePersonRequest {
    string id = 1 [(validate.rules).string.pattern = "^[a-f\\d]{24}$"];
    string name = 2;
    string email = 3;
    Status status = 4;
}

message DeletePersonRequest {
    string id = 1 [(validate.rules).string.pattern = "^[a-f\\d]{24}$"];
}

message Person {
    string id = 1;
    Status status = 2;
    string name = 3;
    string email = 4;
    google.protobuf.Timestamp createdAt = 5;
    google.protobuf.Timestamp updatedAt = 6;
}

message Persons {
    repeated Person items = 1;
}


